--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <link rel="stylesheet" href="style.css">
-<body id="bottom-dark">
-    <button id="nbodyButton" class="float-left submit-button">Launch Nbody</button>
+<html lang="en-us">
+    <body id="bottom-dark">
+        <button id="nbodyButton" class="float-left submit-button">Launch Nbody</button>
 
-    <script type="text/javascript">
-        document.getElementById("nbodyButton").onclick = function () {
-            location.href = "https://bradylangdale.github.io/Nbody/nbody.html";
-        };
-    </script>
-</body>
+        <script type="text/javascript">
+            document.getElementById("nbodyButton").onclick = function () {
+                location.href = "https://bradylangdale.github.io/NBody/nbody.html";
+            };
+        </script>
+    </body>
+</html>
