--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="style.css">
 <html lang="en-us">
-    <body id="bottom-dark">
-        <button id="nbodyButton" class="float-left submit-button">Launch Nbody</button>
-
+    <body id="space">
+        <button id="nbodyButton" class="float-left submit-button">Launch NBody</button>
         <script type="text/javascript">
             document.getElementById("nbodyButton").onclick = function () {
-                location.href = "https://bradylangdale.github.io/NBody/nbody.html";
+                location.href = "https://bradylangdale.github.io/NBody/";
             };
         </script>
     </body>
