--- a/NBody/nbody.html
+++ b/NBody/nbody.html
@@ -15,7 +15,7 @@
       <button id="homeButton" class="float-left submit-button">Home Page</button>
       <script type="text/javascript">
           document.getElementById("homeButton").onclick = function () {
-              location.href = "https://bradylangdale.github.io/";
+              location.href = "https://bradylangdale.github.io/index.html";
           };
       </script>
       <div class="webgl-content">
