--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <button id="nbodyButton" class="float-left submit-button">Launch NBody</button>
         <script type="text/javascript">
             document.getElementById("nbodyButton").onclick = function () {
-                location.href = "https://bradylangdale.github.io/NBody/";
+                location.href = "https://bradylangdale.github.io/NBody/nbody.html";
             };
         </script>
     </body>
